tipo-2/css/player.css
:root{
  --plyr-color-main: #1890FF;
  --plyr-menu-arrow-size: 15px;
  --plyr-control-icon-size: 45px;
  --plyr-control-spacing: 20px;
  --plyr-video-controls-background: rgba(0, 0, 0, 0);
}

.plyr--video {
  box-shadow: 0 0 7px 3px rgb(0,0,0,0.3);
}

.plyr__controls .plyr__controls__item {
  display: none;
}

.plyr--video .plyr__controls {
  cursor: pointer;
  padding-top: calc(var(--plyt-control-spacing, 105px)*3.5) !important;
  z-index: 99 !important;

}

.plyr__control--overlaid {
  z-index: 100 !important;
}

#p{
  /* position: absolute;
  top: 0;
  z-index: 10;
  aspect-ratio: 16 / 9;
  max-width: 100%; */

  position: absolute;
  top: 0;
  z-index: 10;
  aspect-ratio: 16 / 9;
  width: calc(100% - 30px);
  transform: translate(-50%, 0%);
}

.first-layer{
  position: absolute;
  top: 0;
  z-index: 11;
  width: 100%;
  height: auto;
  top: 50%;
  left: 50%;
  background: rgba(255, 255, 255, 0.05);
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  position: absolute;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  aspect-ratio: 16/9;
}

.first-layer .box{
  border-radius: 10px;
  background-color: #1890FF;
  border: 2px solid #FFFFFF;
  width: 50%;
  height: auto;
  padding: 0.5em;
  max-width: 540px;
  text-align: center;
}

.first-layer .box .fl-span {
  font-family: Arial,Helvetica,sans-serif;
  font-size: 24px;
  font-weight: 700;
  display: block;
  text-align: center;
  color: #FFFFFF;
  white-space: normal;
  width: 100%;
  line-height: 1.1em;
  font-size: 1em;
  padding: 0.5em 0;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

.first-layer .box svg {
  width: 100%;
  color: white;
}


.call_to_action_green {
    background: linear-gradient(315deg, #08775a, #1bcb9b, #08775a, #1bcb9b);
    background-size: 500% 500%;
    -webkit-animation: cta2 6s ease infinite;
    -moz-animation: cta2 6s ease infinite;
    -o-animation: cta2 6s ease infinite;
    animation: cta2 6s ease infinite;
    border-bottom: 6px #085750 solid ;

    width: 100%;
    font-size: 1.4em;
    font-weight: 700;
    text-transform: uppercase;
    text-align: center;
    padding: 22px 20px;
    margin: 8px auto 0;
    box-sizing: border-box;
    color: #fff;

    cursor: pointer;
    border-radius: 5px;
    display: block;
    font-family: 'Roboto', sans-serif;
    line-height: 36px;
    /* font-size: 24px; */
    /* font-weight: bold; */

    outline: none;
    border-top: 0;
    border-left: 0;
    border-right: 0;
}

.call_to_action_green:hover, .call_to_action_green:focus {
    color: #fff !important;
    background-image: linear-gradient(to bottom, #08775a 0%, #1bcb9b 100%) !important;
    text-decoration:underline
}

@-webkit-keyframes cta2 {
    0% {
        background-position:0% 50%
    }

    50% {
        background-position:100% 51%
    }

    100% {
        background-position:0% 50%
    }
}

@-moz-keyframes cta2 {
    0% {
        background-position:0% 50%
    }

    50% {
        background-position:100% 51%
    }

    100% {
        background-position:0% 50%
    }
}

@-o-keyframes cta2 {
    0% {
        background-position:0% 50%
    }

    50% {
        background-position:100% 51%
    }

    100% {
        background-position:0% 50%
    }
}

@keyframes cta2 {
    0% {
        background-position:0% 50%
    }

    50% {
        background-position:100% 51%
    }

    100% {
        background-position:0% 50%
    }
}

